--- a/package.json
+++ b/package.json
@@ -2,20 +2,18 @@
     "name": "epos-webgl",
     "private": true,
     "version": "1.0.0",
-    "description": "Seminarski iz EPOSA",
+    "description": "Seminarski iz EPOS-a",
     "main": "src/main.ts",
     "scripts": {
-	"build": "cross-env TS_NODE_PROJECT=\"config/webpack.tsconfig.json\" webpack --config config/webpack.config.ts",
+	      "build": "cross-env TS_NODE_PROJECT=\"config/webpack.tsconfig.json\" webpack --config config/webpack.config.ts",
         "build:release": "cross-env NODE_ENV=production npm run build",
-
-
-	"test": "echo \"Error: no test specified\" && exit 1"
+	      "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
-	"ts-loader": "^6.0.4",
-	"ts-node": "^8.3.0",
-	"tslint": "^5.19.0",
-	"typescript": "^3.7.5",
+      	"ts-loader": "^6.0.4",
+      	"ts-node": "^8.3.0",
+      	"tslint": "^5.19.0",
+      	"typescript": "^3.7.5",
         "@types/clean-webpack-plugin": "^0.1.3",
         "@types/html-webpack-plugin": "^3.2.1",
         "@types/uglifyjs-webpack-plugin": "^1.1.0",
@@ -27,19 +25,15 @@
         "raw-loader": "^3.1.0",
         "surge": "^0.21.3",
         "terser-webpack-plugin": "^1.4.1",
-
-
-
-
         "webpack": "^4.39.3",
         "webpack-cli": "^3.3.7",
         "webpack-dev-server": "^3.8.0",
         "webpack-merge": "^4.2.2"
-
     },
     "keywords": [
 	"webgl"
     ],
+
     "author": "Filip Miletic 0359/2016",
     "license": "MIT"
 }
